--- a/src/view/CRUD_Funcionario.fxml
+++ b/src/view/CRUD_Funcionario.fxml
@@ -11,86 +11,112 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="funcionarioPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CRUD_Funcionario">
    <children>
+      <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" onAction="#loadCadastro_FuncionarioView" prefHeight="25.0" prefWidth="236.0" text="Prosseguir">
+         <font>
+            <Font size="16.0" />
+         </font></Button>
       <TableView layoutX="425.0" layoutY="149.0" prefHeight="733.0" prefWidth="810.0">
         <columns>
           <TableColumn prefWidth="349.0" text="Nome" />
           <TableColumn minWidth="0.0" prefWidth="183.0" text="Código" />
         </columns>
       </TableView>
-      <TextField layoutX="456.0" layoutY="115.0" prefHeight="25.0" prefWidth="499.0" />
-      <ImageView fitHeight="23.0" fitWidth="35.0" layoutX="425.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
+      <TextField layoutX="456.0" layoutY="109.0" prefHeight="25.0" prefWidth="499.0">
+         <font>
+            <Font size="16.0" />
+         </font></TextField>
+      <ImageView fitHeight="27.0" fitWidth="31.0" layoutX="425.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../bin/model/resources/searchIcon.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="21.0" layoutY="128.0" text="Cadastrar novo funcionário">
+      <Label layoutX="22.0" layoutY="116.0" text="Cadastrar novo funcionário">
          <font>
-            <Font name="Impact" size="21.0" />
+            <Font name="Impact" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="368.0" text="Atualizar funcionário">
+      <Label layoutX="22.0" layoutY="344.0" prefWidth="314.0" text="Atualizar funcionário">
          <font>
-            <Font name="Impact" size="21.0" />
+            <Font name="Impact" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="408.0" prefHeight="40.0" prefWidth="185.0" text="Selecione na tabela o funcionário a ser atualizado" wrapText="true">
+      <Label layoutX="22.0" layoutY="378.0" prefHeight="65.0" prefWidth="185.0" text="Selecione na tabela o funcionário a ser atualizado" wrapText="true">
          <font>
-            <Font size="14.0" />
+            <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="21.0" layoutY="725.0" text="Deletar funcionário">
+      <Label layoutX="22.0" layoutY="653.0" prefHeight="34.0" prefWidth="314.0" text="Deletar funcionário">
          <font>
-            <Font name="Impact" size="21.0" />
+            <Font name="Impact" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="21.0" layoutY="765.0" prefHeight="40.0" prefWidth="185.0" text="Selecione na tabela o funcionário a ser deletado" wrapText="true">
+      <Label layoutX="22.0" layoutY="687.0" prefHeight="65.0" prefWidth="185.0" text="Selecione na tabela o funcionário a ser deletado" wrapText="true">
          <font>
-            <Font size="14.0" />
+            <Font size="15.0" />
          </font>
       </Label>
-      <Button layoutX="25.0" layoutY="518.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="242.0" text="Prosseguir" />
-      <Button layoutX="21.0" layoutY="239.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="236.0" text="Prosseguir" />
-      <Label layoutX="21.0" layoutY="805.0" text="Nome">
+      <Button layoutX="22.0" layoutY="528.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="242.0" text="Prosseguir">
+         <font>
+            <Font size="16.0" />
+         </font></Button>
+      <Button layoutX="22.0" layoutY="836.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Deletar">
+         <font>
+            <Font size="16.0" />
+         </font></Button>
+      <Label layoutX="22.0" layoutY="443.0" text="Nome">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="21.0" layoutY="835.0" text="CPF">
+      <Label layoutX="22.0" layoutY="483.0" text="CPF">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField disable="true" editable="false" layoutX="88.0" layoutY="806.0" prefHeight="25.0" prefWidth="261.0" />
-      <TextField disable="true" editable="false" layoutX="88.0" layoutY="836.0" prefHeight="25.0" prefWidth="261.0" />
-      <Button layoutX="21.0" layoutY="872.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Deletar" />
-      <Label layoutX="25.0" layoutY="448.0" text="Nome">
+      <TextField disable="true" layoutX="92.0" layoutY="481.0" prefHeight="25.0" prefWidth="261.0">
+         <font>
+            <Font size="15.0" />
+         </font></TextField>
+      <TextField disable="true" layoutX="92.0" layoutY="441.0" prefHeight="25.0" prefWidth="261.0">
+         <font>
+            <Font size="15.0" />
+         </font></TextField>
+      <RadioButton layoutX="22.0" layoutY="155.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Médico">
          <font>
             <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="25.0" layoutY="478.0" text="CPF">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <TextField disable="true" layoutX="92.0" layoutY="479.0" prefHeight="25.0" prefWidth="261.0" />
-      <TextField disable="true" layoutX="92.0" layoutY="449.0" prefHeight="25.0" prefWidth="261.0" />
-      <RadioButton layoutX="22.0" layoutY="167.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="87.0" text="Médico">
-         <font>
-            <Font size="14.0" />
          </font>
       </RadioButton>
-      <RadioButton layoutX="22.0" layoutY="198.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="114.0" text="Atendente">
+      <RadioButton layoutX="22.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Atendente">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </RadioButton>
       <Button fx:id="btn_return" layoutX="914.0" layoutY="897.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="322.0" text="Retornar">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="16.0" />
          </font>
       </Button>
+      <Label layoutX="22.0" layoutY="754.0" text="Nome">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="22.0" layoutY="794.0" text="CPF">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField disable="true" layoutX="89.0" layoutY="792.0" prefHeight="25.0" prefWidth="261.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <TextField disable="true" layoutX="92.0" layoutY="752.0" prefHeight="25.0" prefWidth="261.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
