--- a/bin/view/CRUD_Funcionario.fxml
+++ b/bin/view/CRUD_Funcionario.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -11,7 +16,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="funcionarioPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CRUD_Funcionario">
+<AnchorPane fx:id="funcionarioPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CRUD_Funcionario">
    <children>
       <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" onAction="#loadCadastro_FuncionarioView" prefHeight="25.0" prefWidth="236.0" text="Prosseguir">
          <font>
@@ -83,12 +88,12 @@
          <font>
             <Font size="15.0" />
          </font></TextField>
-      <RadioButton layoutX="22.0" layoutY="155.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Médico">
+      <RadioButton fx:id="radioButtonMedico" layoutX="22.0" layoutY="155.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Médico">
          <font>
             <Font size="18.0" />
          </font>
       </RadioButton>
-      <RadioButton layoutX="22.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Atendente">
+      <RadioButton fx:id="radioButtonAtendente" layoutX="22.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Atendente">
          <font>
             <Font size="18.0" />
          </font>
