--- a/bin/view/Cadastro_Funcionario.fxml
+++ b/bin/view/Cadastro_Funcionario.fxml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="cadastroFuncionarioPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Cadastro_Funcionario">
    <children>
-      <TextField layoutX="121.0" layoutY="119.0" />
-      <Label layoutX="43.0" layoutY="123.0" text="cpf" />
+      <TextField layoutX="99.0" layoutY="124.0" />
+      <Label layoutX="43.0" layoutY="123.0" text="CPF">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button fx:id="btn_return" layoutX="914.0" layoutY="899.0" mnemonicParsing="false" onAction="#loadCRUD_FuncionarioView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Button>
+      <RadioButton fx:id="radioButtonMedico" layoutX="43.0" layoutY="841.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Médico">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </RadioButton>
+      <RadioButton fx:id="radioButtonAtendente" layoutX="43.0" layoutY="872.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Atendente">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </RadioButton>
    </children>
 </AnchorPane>
