--- a/src/view/CRUD_Funcionario.fxml
+++ b/src/view/CRUD_Funcionario.fxml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -16,9 +10,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="funcionarioPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CRUD_Funcionario">
+<AnchorPane fx:id="funcionarioPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CRUD_Funcionario">
    <children>
-      <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" onAction="#loadCadastro_FuncionarioView" prefHeight="25.0" prefWidth="236.0" text="Prosseguir">
+      <Button layoutX="25.0" layoutY="207.0" mnemonicParsing="false" onAction="#loadCadastro_FuncionarioView" prefHeight="25.0" prefWidth="236.0" text="Prosseguir">
          <font>
             <Font size="16.0" />
          </font></Button>
@@ -37,7 +31,7 @@
             <Image url="@../../bin/model/resources/searchIcon.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="22.0" layoutY="116.0" text="Cadastrar novo funcionário">
+      <Label layoutX="22.0" layoutY="149.0" text="Cadastrar novo funcionário">
          <font>
             <Font name="Impact" size="28.0" />
          </font>
@@ -88,17 +82,7 @@
          <font>
             <Font size="15.0" />
          </font></TextField>
-      <RadioButton fx:id="radioButtonMedico" layoutX="22.0" layoutY="155.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Médico">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </RadioButton>
-      <RadioButton fx:id="radioButtonAtendente" layoutX="22.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Atendente">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </RadioButton>
-      <Button fx:id="btn_return" layoutX="914.0" layoutY="897.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="322.0" text="Retornar">
+      <Button fx:id="btn_return" layoutX="914.0" layoutY="897.0" mnemonicParsing="false" onAction="#loadAdministradorView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
@@ -123,5 +107,10 @@
             <Font size="15.0" />
          </font>
       </TextField>
+      <Label layoutX="456.0" layoutY="62.0" prefWidth="314.0" text="Buscar">
+         <font>
+            <Font name="Impact" size="28.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
