--- a/src/view/Cadastro_Funcionario.fxml
+++ b/src/view/Cadastro_Funcionario.fxml
@@ -1,13 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="cadastroFuncionarioPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Cadastro_Funcionario">
    <children>
-      <TextField layoutX="121.0" layoutY="119.0" />
-      <Label layoutX="43.0" layoutY="123.0" text="cpf" />
+      <TextField layoutX="44.0" layoutY="157.0" promptText="João Maria José">
+         <font>
+            <Font size="16.0" />
+         </font></TextField>
+      <Label layoutX="44.0" layoutY="197.0" text="CPF">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button fx:id="btn_return" layoutX="883.0" layoutY="873.0" mnemonicParsing="false" onAction="#loadCRUD_FuncionarioView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Button>
+      <RadioButton fx:id="radioButtonMedico" layoutX="854.0" layoutY="140.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Médico">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </RadioButton>
+      <RadioButton fx:id="radioButtonAtendente" layoutX="854.0" layoutY="181.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Atendente">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </RadioButton>
+      <Label layoutX="44.0" layoutY="130.0" text="Nome">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField layoutX="44.0" layoutY="224.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </TextField>
+      <Label layoutX="286.0" layoutY="197.0" text="Data de nascimento">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField layoutX="286.0" layoutY="224.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </TextField>
+      <Label layoutX="43.0" layoutY="68.0" text="Dados pessoais">
+         <font>
+            <Font name="Impact" size="28.0" />
+         </font>
+      </Label>
+      <Line endX="684.0" layoutX="43.0" layoutY="110.0" startX="1.0" />
+      <Label layoutX="43.0" layoutY="331.0" text="Endereço">
+         <font>
+            <Font name="Impact" size="28.0" />
+         </font>
+      </Label>
+      <Line endX="684.0" layoutX="43.0" layoutY="373.0" startX="1.0" />
+      <Label layoutX="44.0" layoutY="456.0" text="Endereço completo">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="44.0" layoutY="412.0" text="CEP">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField layoutX="44.0" layoutY="483.0" prefHeight="37.0" prefWidth="684.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="44.0" layoutY="416.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </TextField>
+      <Label layoutX="44.0" layoutY="651.0" text="Celular">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField layoutX="44.0" layoutY="678.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </TextField>
+      <Label layoutX="43.0" layoutY="589.0" text="Contato">
+         <font>
+            <Font name="Impact" size="28.0" />
+         </font>
+      </Label>
+      <Line endX="684.0" layoutX="43.0" layoutY="631.0" startX="1.0" />
+      <Label layoutX="44.0" layoutY="730.0" text="Telefone">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField layoutX="44.0" layoutY="757.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </TextField>
+      <Label layoutX="286.0" layoutY="651.0" text="E-mail">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField layoutX="286.0" layoutY="678.0" prefHeight="37.0" prefWidth="441.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </TextField>
+      <Label layoutX="854.0" layoutY="68.0" text="Tipo de funcionário">
+         <font>
+            <Font name="Impact" size="28.0" />
+         </font>
+      </Label>
+      <Line endX="350.0" layoutX="854.0" layoutY="110.0" startX="1.0" />
+      <Button layoutX="43.0" layoutY="873.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="108.0" text="Salvar">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
