--- a/bin/view/Administrador.fxml
+++ b/bin/view/Administrador.fxml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane fx:id="administradorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="310.0" prefWidth="479.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Administrador">
-   <children>
-      <Button layoutX="256.0" layoutY="72.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="150.0" text="Ver agenda" />
-      <Button layoutX="67.0" layoutY="72.0" mnemonicParsing="false" onAction="#loadCRUD_FuncionarioView" prefHeight="100.0" prefWidth="150.0" text="Gerenciar funcionários" />
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Administrador">
+   <top>
+      <Label prefHeight="40.0" prefWidth="212.0" text="Administrador" BorderPane.alignment="CENTER_LEFT">
+         <font>
+            <Font name="Impact" size="35.0" />
+         </font>
+         <BorderPane.margin>
+            <Insets left="20.0" top="10.0" />
+         </BorderPane.margin>
+      </Label>
+   </top>
+   <right>
+      <VBox fx:id="vbox" prefHeight="346.0" prefWidth="180.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="213.0" text="Ver agenda">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Region prefHeight="30.0" prefWidth="212.0" />
+            <Button mnemonicParsing="false" onAction="#loadCRUD_FuncionarioView" prefHeight="60.0" prefWidth="212.0" text="Gerenciar funcionários">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Region prefHeight="30.0" prefWidth="212.0" />
+            <Button mnemonicParsing="false" onAction="#loadCRUD_FuncionarioView" prefHeight="60.0" prefWidth="212.0" text="Sign out">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+   </right>
+</BorderPane>
