--- a/src/view/application.css
+++ b/src/view/application.css
@@ -1,13 +1,9 @@
 .root {
     -fx-background-image: url("/model/resources/background.png");
-    -fx-background-repeat: stretch;   
+    -fx-background-size: cover;
+    -fx-background-repeat: no-repeat;   
     -fx-background-position: center center;
     -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0); 
-}
-
-.label .text{
-    -fx-stroke: magenta;
-    -fx-stroke-width: 0.1px;
 }
 
 #btn_return {
