--- a/src/view/Agenda.fxml
+++ b/src/view/Agenda.fxml
@@ -1,22 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="441.0" prefWidth="677.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="agendaPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <Pane prefHeight="492.0" prefWidth="673.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView layoutX="171.0" layoutY="73.0" prefHeight="313.0" prefWidth="415.0">
+            <TableView layoutX="291.0" layoutY="108.0" prefHeight="478.0" prefWidth="595.0">
               <columns>
                 <TableColumn prefWidth="108.0" text="Data" />
                 <TableColumn prefWidth="174.0" text="Paciente" />
                   <TableColumn minWidth="0.0" prefWidth="132.0" text="Médico" />
               </columns>
             </TableView>
+            <Label layoutX="14.0" layoutY="14.0" text="Agenda de consultas">
+               <font>
+                  <Font name="Impact" size="32.0" />
+               </font>
+            </Label>
+            <RadioButton layoutX="14.0" layoutY="134.0" mnemonicParsing="false" text="Calendário" />
+            <RadioButton layoutX="14.0" layoutY="163.0" mnemonicParsing="false" text="Tabela" />
+            <Label layoutX="14.0" layoutY="107.0" text="Modo de exibição">
+               <font>
+                  <Font name="Impact" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="16.0" layoutY="267.0" text="Ordernar por:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <ComboBox layoutX="17.0" layoutY="294.0" prefWidth="150.0" />
+            <Label layoutX="17.0" layoutY="380.0" text="Filtrar por:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField layoutX="93.0" layoutY="408.0" prefHeight="25.0" prefWidth="189.0" />
+            <Label layoutX="26.0" layoutY="410.0" text="Paciente">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField layoutX="93.0" layoutY="451.0" prefHeight="25.0" prefWidth="189.0" />
+            <Label layoutX="26.0" layoutY="453.0" text="Data">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField layoutX="93.0" layoutY="494.0" prefHeight="25.0" prefWidth="189.0" />
+            <Label layoutX="26.0" layoutY="496.0" text="Médico">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </center>
