--- a/bin/view/CRUD_Funcionario.fxml
+++ b/bin/view/CRUD_Funcionario.fxml
@@ -1,128 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane fx:id="funcionarioPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CRUD_Funcionario">
-   <center>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1250.0">
+   <left>
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="25.0" layoutY="207.0" mnemonicParsing="false" onAction="#loadCadastro_FuncionarioView" prefHeight="25.0" prefWidth="236.0" text="Prosseguir">
+            <Label text="Cadastrar novo funcionário">
+               <font>
+                  <Font name="Impact" size="28.0" />
+               </font>
+            </Label>
+            <Label text="Nome">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField disable="true" prefHeight="25.0" prefWidth="261.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <Label text="CPF">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField disable="true" prefHeight="25.0" prefWidth="261.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <Button mnemonicParsing="false" onAction="#loadCadastro_FuncionarioView" prefHeight="25.0" prefWidth="236.0" text="Prosseguir">
                <font>
                   <Font size="16.0" />
                </font>
             </Button>
-            <TableView layoutX="425.0" layoutY="149.0" prefHeight="733.0" prefWidth="810.0">
-              <columns>
-                <TableColumn prefWidth="349.0" text="Nome" />
-                <TableColumn minWidth="0.0" prefWidth="183.0" text="Código" />
-              </columns>
+            <Label prefWidth="314.0" text="Atualizar funcionário">
+               <font>
+                  <Font name="Impact" size="28.0" />
+               </font>
+            </Label>
+            <Label text="Selecione na tabela o funcionário a ser atualizado" wrapText="true">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label text="Nome">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField disable="true" prefHeight="25.0" prefWidth="261.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <Label text="CPF">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField disable="true" prefHeight="25.0" prefWidth="261.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="242.0" text="Prosseguir">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Label prefHeight="34.0" prefWidth="314.0" text="Deletar funcionário">
+               <font>
+                  <Font name="Impact" size="28.0" />
+               </font>
+            </Label>
+            <Label text="Selecione na tabela o funcionário a ser deletado" wrapText="true">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Deletar">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </BorderPane.margin>
+      </VBox>
+   </left>
+   <right>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Buscar">
+               <font>
+                  <Font name="Impact" size="28.0" />
+               </font>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Label>
+            <TextField prefHeight="25.0" prefWidth="499.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </TextField>
+            <TableView>
+               <columns>
+                  <TableColumn prefWidth="349.0" text="Nome" />
+                  <TableColumn minWidth="0.0" prefWidth="183.0" text="Código" />
+               </columns>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </TableView>
-            <TextField layoutX="456.0" layoutY="109.0" prefHeight="25.0" prefWidth="499.0">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </TextField>
-            <ImageView fitHeight="27.0" fitWidth="31.0" layoutX="425.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../bin/model/resources/searchIcon.jpg" />
-               </image>
-            </ImageView>
-            <Label layoutX="22.0" layoutY="149.0" text="Cadastrar novo funcionário">
-               <font>
-                  <Font name="Impact" size="28.0" />
-               </font>
-            </Label>
-            <Label layoutX="22.0" layoutY="344.0" prefWidth="314.0" text="Atualizar funcionário">
-               <font>
-                  <Font name="Impact" size="28.0" />
-               </font>
-            </Label>
-            <Label layoutX="22.0" layoutY="378.0" prefHeight="65.0" prefWidth="185.0" text="Selecione na tabela o funcionário a ser atualizado" wrapText="true">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <Label layoutX="22.0" layoutY="653.0" prefHeight="34.0" prefWidth="314.0" text="Deletar funcionário">
-               <font>
-                  <Font name="Impact" size="28.0" />
-               </font>
-            </Label>
-            <Label layoutX="22.0" layoutY="687.0" prefHeight="65.0" prefWidth="185.0" text="Selecione na tabela o funcionário a ser deletado" wrapText="true">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <Button layoutX="22.0" layoutY="528.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="242.0" text="Prosseguir">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Button>
-            <Button layoutX="22.0" layoutY="836.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Deletar">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Button>
-            <Label layoutX="22.0" layoutY="443.0" text="Nome">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="22.0" layoutY="483.0" text="CPF">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <TextField disable="true" layoutX="92.0" layoutY="481.0" prefHeight="25.0" prefWidth="261.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </TextField>
-            <TextField disable="true" layoutX="92.0" layoutY="441.0" prefHeight="25.0" prefWidth="261.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </TextField>
-            <Button fx:id="btn_return" layoutX="914.0" layoutY="897.0" mnemonicParsing="false" onAction="#loadAdministradorView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
+            <Button fx:id="btn_return1" mnemonicParsing="false" onAction="#loadAdministradorView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </Button>
-            <Label layoutX="22.0" layoutY="754.0" text="Nome">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="22.0" layoutY="794.0" text="CPF">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <TextField disable="true" layoutX="89.0" layoutY="792.0" prefHeight="25.0" prefWidth="261.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </TextField>
-            <TextField disable="true" layoutX="92.0" layoutY="752.0" prefHeight="25.0" prefWidth="261.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </TextField>
-            <Label layoutX="456.0" layoutY="62.0" prefWidth="314.0" text="Buscar">
-               <font>
-                  <Font name="Impact" size="28.0" />
-               </font>
-            </Label>
          </children>
-      </AnchorPane>
-   </center>
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </BorderPane.margin>
+      </VBox>
+   </right>
 </BorderPane>
