--- a/bin/view/application.css
+++ b/bin/view/application.css
@@ -1,13 +1,8 @@
-.root {
+.root, #formulario {
     -fx-background-image: url("/model/resources/background.png");
     -fx-background-size: cover;
     -fx-background-repeat: no-repeat;   
     -fx-background-position: center center;
-    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0); 
-}
-
-#transparentBG {
-    -fx-background-color: rgba(0, 0, 0, 0);
 }
 
 #btn_return {
