Make masked text fields

--- a/bin/view/CRUD_Funcionario.fxml
+++ b/bin/view/CRUD_Funcionario.fxml
@@ -46,37 +46,15 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Label>
-            <Label text="Nome">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </Label>
-            <TextField disable="true" prefHeight="25.0" prefWidth="261.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </TextField>
             <Label text="CPF">
                <font>
                   <Font size="18.0" />
                </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
             </Label>
             <TextField disable="true" prefHeight="25.0" prefWidth="261.0">
                <font>
                   <Font size="15.0" />
                </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
             </TextField>
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="242.0" text="Prosseguir">
                <font>
@@ -102,6 +80,22 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Label>
+            <Label text="CPF">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Label>
+            <TextField disable="true" prefHeight="25.0" prefWidth="261.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </TextField>
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Deletar">
                <font>
                   <Font size="16.0" />
