--- a/src/view/CRUD_Funcionario.fxml
+++ b/src/view/CRUD_Funcionario.fxml
@@ -6,7 +6,10 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import src.MaskedTextField?>
@@ -100,7 +103,7 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </MaskedTextField>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Deletar">
+            <Button fx:id="btn_delete" mnemonicParsing="false" prefHeight="37.0" prefWidth="162.0" text="Deletar">
                <font>
                   <Font size="16.0" />
                </font>
@@ -125,14 +128,23 @@
                   <Insets />
                </VBox.margin>
             </Label>
-            <TextField prefHeight="25.0" prefWidth="499.0">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </TextField>
+            <HBox>
+               <children>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../model/resources/searchIcon.jpg" />
+                     </image>
+                     <HBox.margin>
+                        <Insets right="5.0" top="3.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <TextField prefWidth="509.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </HBox>
             <TableView>
                <columns>
                   <TableColumn prefWidth="349.0" text="Nome" />
