--- a/bin/view/Login.fxml
+++ b/bin/view/Login.fxml
@@ -36,12 +36,12 @@
                   <Font name="Impact" size="20.0" />
                </font>
             </Label>
-            <PasswordField layoutX="14.0" layoutY="215.0" prefHeight="31.0" prefWidth="234.0">
+            <PasswordField layoutX="14.0" layoutY="215.0" prefWidth="234.0">
                <font>
                   <Font size="15.0" />
                </font>
             </PasswordField>
-            <TextField layoutX="14.0" layoutY="138.0" prefHeight="31.0" prefWidth="236.0">
+            <TextField layoutX="14.0" layoutY="138.0" prefWidth="236.0">
                <font>
                   <Font size="15.0" />
                </font>
