--- a/src/view/Cadastro_Funcionario.fxml
+++ b/src/view/Cadastro_Funcionario.fxml
@@ -40,7 +40,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="37.0" prefWidth="465.0" promptText="João Maria José">
+                  <TextField prefWidth="465.0" promptText="João Maria José">
                   
                   </TextField>
                   <Label text="CPF">
@@ -96,20 +96,11 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField>
-                     
-                  </TextField>
-                  <Label text="Celular">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField>
-                     
-                  </TextField>
+                  <MaskedTextField mask="#####-###" plainText="">
+	                 <font>
+	                       <Font size="14.0" />
+	                 </font>
+                  </MaskedTextField>
                   <Label text="Contato">
                      <font>
                         <Font name="Impact" size="28.0" />
@@ -123,12 +114,28 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </Line>
+                  <Label text="Celular">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </Label>
+                  <MaskedTextField mask="(##) 9####-####" plainText="">
+	                 <font>
+	                       <Font size="14.0" />
+	                 </font>
+                  </MaskedTextField>
                   <Label text="Telefone">
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
                   </Label>
-                  <MaskedTextField mask="(##) # ####-####" plainText="">
+                  <MaskedTextField mask="(##) ####-####" plainText="">
 	                 <font>
 	                       <Font size="14.0" />
 	                 </font>
@@ -142,8 +149,10 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField prefHeight="37.0" prefWidth="441.0">
-                     
+                  <TextField prefWidth="441.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </TextField>
                   <Label text="Tipo de funcionário">
                      <font>
