--- a/src/view/CRUD_Paciente.fxml
+++ b/src/view/CRUD_Paciente.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.text.Font?>
 <?import src.MaskedTextField?>
 
-<BorderPane fx:id="funcionarioPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CRUD_Funcionario">
+<BorderPane fx:id="pacientePane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CRUD_Paciente">
    <left>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <Label text="Cadastrar novo funcionário">
+            <Label text="Cadastrar novo paciente">
                <font>
                   <Font name="Impact" size="28.0" />
                </font>
@@ -26,7 +26,7 @@
                   <Insets />
                </VBox.margin>
             </Label>
-            <Button mnemonicParsing="false" onAction="#loadCadastro_FuncionarioView" prefHeight="25.0" prefWidth="236.0" text="Prosseguir">
+            <Button mnemonicParsing="false" onAction="#loadCadastro_PacienteView" prefHeight="25.0" prefWidth="236.0" text="Prosseguir">
                <font>
                   <Font size="16.0" />
                </font>
@@ -34,7 +34,7 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
-            <Label prefWidth="314.0" text="Atualizar funcionário">
+            <Label prefWidth="314.0" text="Atualizar paciente">
                <font>
                   <Font name="Impact" size="28.0" />
                </font>
@@ -71,7 +71,7 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
-            <Label prefHeight="34.0" prefWidth="314.0" text="Deletar funcionário">
+            <Label prefHeight="34.0" prefWidth="314.0" text="Deletar paciente">
                <font>
                   <Font name="Impact" size="28.0" />
                </font>
@@ -154,7 +154,7 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </TableView>
-            <Button fx:id="btn_return" mnemonicParsing="false" onAction="#loadAdministradorView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
+            <Button fx:id="btn_return" mnemonicParsing="false" onAction="#loadAtendenteView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
